# tree-sitter-jcl

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_STATUS.md  README.md  USAGE_GUIDE.md  grammar.js  jcl_extractor.py  package.json
.agent-os/: config.yaml
.serena/: config.yaml
bindings/node/: binding.cc  index.js
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/tree_sitter_jcl/: __init__.py  binding.cpp
bindings/rust/: lib.rs
examples/: complex.jcl  simple.jcl
queries/: analysis.scm  highlights.scm  locals.scm  patterns.scm
scripts/: analyze_ast_output.sh  deep_cleanup.sh  extract_jcl_data.sh  parse_examples.sh
src/: grammar.json  node-types.json
test/: basic.test.js  real_jcl.test.js  validate_all_jcl.js
test/corpus/: basic.txt  inline_data.txt  proc_pend_support.txt  real_dd_statements.txt  real_exec_statements.txt  real_job_statements.txt
