[build-system]
requires = ["setuptools>=45", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jcl"
version = "0.1.0"
description = "Tree-sitter grammar for JCL (Job Control Language)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["tree-sitter", "jcl", "mainframe", "parser", "syntax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "tree-sitter>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tree-sitter-jcl"
Repository = "https://github.com/yourusername/tree-sitter-jcl"
Issues = "https://github.com/yourusername/tree-sitter-jcl/issues"